@@ -13,6 +13,7 @@ Features added
   self-signed HTTPS servers in linkcheck and intersphinx
 * #2215: make.bat generated by sphinx-quickstart can be called from another dir.
   Thanks to Timotheus Kampik.
+* #3185: Add new warning type ``misc.highlighting_failure``
 
 Bugs fixed
 ----------
